==> apache/nuttx/arch/arm/src/lpc43xx/lpc43_adc.c <==
#include <nuttx/config.h>
#include <stdio.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <semaphore.h>
#include <errno.h>
#include <debug.h>
#include <arch/board/board.h>
#include <nuttx/arch.h>
#include <nuttx/analog/adc.h>
#include "up_internal.h"
#include "up_arch.h"
#include "chip.h"
#include "lpc43_syscon.h"
#include "lpc43_pinconn.h"
#include "lpc43_adc.h"
#define CONFIG_ADC0_MASK     0x01
#define CONFIG_ADC0_SPS      1000
#define CONFIG_ADC0_AVERAGE  200

static void adc_reset(FAR struct adc_dev_s *dev)
{
  irqstate_t flags;
  uint32_t regval;
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;

  flags = irqsave();

  regval  = getreg32(LPC43_SYSCON_PCONP);
  regval |= SYSCON_PCONP_PCADC;
  putreg32(regval, LPC43_SYSCON_PCONP);

  putreg32(ADC_CR_PDN,LPC43_ADC_CR);

  regval  = getreg32(LPC43_SYSCON_PCLKSEL0);
  regval &= ~SYSCON_PCLKSEL0_ADC_MASK;
  regval |= (SYSCON_PCLKSEL_CCLK8 << SYSCON_PCLKSEL0_ADC_SHIFT);
  putreg32(regval, LPC43_SYSCON_PCLKSEL0);

  uint32_t clkdiv=LPC43_CCLK/8/65/priv->sps;
  clkdiv<<=8;
  clkdiv&=0xff00;
  putreg32(ADC_CR_PDN|ADC_CR_BURST|clkdiv|priv->mask,LPC43_ADC_CR);

  if (priv->mask&0x01)
    lpc43_configgpio(GPIO_AD0p0);
  else if (priv->mask&0x02)
    lpc43_configgpio(GPIO_AD0p1);
  else if (priv->mask&0x04)
    lpc43_configgpio(GPIO_AD0p2);
  else if (priv->mask&0x08)
    lpc43_configgpio(GPIO_AD0p3);
  else if (priv->mask&0x10)
    lpc43_configgpio(GPIO_AD0p4);
  else if (priv->mask&0x20)
    lpc43_configgpio(GPIO_AD0p5);
  else if (priv->mask&0x40)
    lpc43_configgpio(GPIO_AD0p6);
  else if (priv->mask&0x80)
    lpc43_configgpio(GPIO_AD0p7);

  irqrestore(flags);
}

static void adc_rxint(FAR struct adc_dev_s *dev, bool enable)
{
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)dev->ad_priv;
  if (enable)
    putreg32(ADC_INTEN_GLOBAL, LPC43_ADC_INTEN);
  else
    putreg32(0x00, LPC43_ADC_INTEN);
}

static int adc_interrupt(int irq, void *context)
{
  uint32_t regval;
  FAR struct up_dev_s *priv = (FAR struct up_dev_s *)g_adcdev.ad_priv;
  unsigned char ch;
  int32_t value;

  regval = getreg32(LPC43_ADC_GDR);
  ch = (regval >> 24) & 0x07;
  priv->buf[ch] += regval & 0xfff0;
  priv->count[ch]++;
  if (priv->count[ch] >= CONFIG_ADC0_AVERAGE)
    {
      value = priv->buf[ch] / priv->count[ch];
      value <<= 15;
      adc_receive(&g_adcdev,ch,value);
      priv->buf[ch] = 0;
      priv->count[ch] = 0;
    }
  return OK;
}

FAR struct adc_dev_s *lpc43_adcinitialize(void)
{
  return &g_adcdev;
}
